# Cpp

AskMe Project/: AskMe.cpp
AskMeWithOOP/: CMakeLists.txt  README.md  questions.txt  users.txt
AskMeWithOOP/header/: HelperFunctions.hpp  Question.hpp  System.hpp  User.hpp
AskMeWithOOP/source/: HelperFunctions.cpp  Question.cpp  System.cpp  User.cpp  main.cpp
Hospital Project/: APIS.cpp  APIS.hh  APP.cc
Library Project/: Library_System.cpp
